--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html class="theme-dark">
 	<head>
-		<link type="image/x-icon" rel="shortcut icon" href="https://MoonLightPerson.github.io/_res/imgs/favicon.ico?"></link>
-		<link type="text/css" rel="stylesheet" href="https://MoonLightPerson.github.io/_res/css/discord.css"></link>
-		<link type="text/css" rel="stylesheet" href="https://MoonLightPerson.github.io/_res/css/main.css"></link>
-		<script src="https://MoonLightPerson.github.io/downloader/downloader.js"></script>
-		<script src="https://MoonLightPerson.github.io/_res/js/main.js"></script>
-		<title>BetterDiscord Аддоны</title>
+		<link type="image/x-icon" rel="shortcut icon" href="https://mwittrien.github.io/_res/imgs/favicon.ico?"></link>
+		<link type="text/css" rel="stylesheet" href="https://mwittrien.github.io/_res/css/discord.css"></link>
+		<link type="text/css" rel="stylesheet" href="https://mwittrien.github.io/_res/css/main.css"></link>
+		<script src="https://mwittrien.github.io/downloader/downloader.js"></script>
+		<script src="https://mwittrien.github.io/_res/js/main.js"></script>
+		<title>BetterDiscord Addons</title>
 	</head>
 	<body>
 		<div class="app-mount">
