--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html class="theme-dark">
 	<head>
 		<link type="image/x-icon" rel="shortcut icon" href="https://mwittrien.github.io/_res/imgs/favicon.ico?"></link>
-		<link type="text/css" rel="stylesheet" href="https://moonlightperson.github.io/_res/css/discord.css"></link>
-		<link type="text/css" rel="stylesheet" href="https://moonlightperson.github.io/_res/css/main.css"></link>
+		<link type="text/css" rel="stylesheet" href="https://mwittrien.github.io/_res/css/discord.css"></link>
+		<link type="text/css" rel="stylesheet" href="https://mwittrien.github.io/_res/css/main.css"></link>
 		<script src="moonlightperson.github.io/downloader/downloader.js"></script>
 		<script src="moonlightperson.github.io/downloader/main.js"></script>
 		<title>BetterDiscord Addons</title>
