--- a/downloader/index.html
+++ b/downloader/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html class="theme-dark">
 	<head>
-		<link type="image/x-icon" rel="shortcut icon" href="https://moonlightperson.github.io/_res/imgs/favicon.ico?"></link>
-		<link type="text/css" rel="stylesheet" href="https://moonlightperson.github.io/_res/css/discord.css"></link>
+		<link type="image/x-icon" rel="shortcut icon" href="https://mwittrien.github.io/_res/imgs/favicon.ico?"></link>
+		<link type="text/css" rel="stylesheet" href="https://mwittrien.github.io/_res/css/discord.css"></link>
 		<script src="https://moonlightperson.github.io/downloader/downloader.js"></script>
 		<script src="https://moonlightperson.github.io/downloader/main.js"></script>
 		<title>Downloader</title>
