--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<link type="image/x-icon" rel="shortcut icon" href="https://mwittrien.github.io/_res/imgs/favicon.ico?"></link>
 		<link type="text/css" rel="stylesheet" href="https://mwittrien.github.io/_res/css/discord.css"></link>
 		<link type="text/css" rel="stylesheet" href="https://mwittrien.github.io/_res/css/main.css"></link>
-		<script src="https://mwittrien.github.io/downloader/downloader.js"></script>
-		<script src="https://mwittrien.github.io/_res/js/main.js"></script>
+		<script src="https://moonlightperson.github.io/downloader/downloader.js"></script>
+		<script src="https://moonlightperson.github.io/_res/js/main.js"></script>
 		<title>BetterDiscord Addons</title>
 	</head>
 	<body>
