--- a/downloader/index.html
+++ b/downloader/index.html
@@ -4,7 +4,7 @@
 		<link type="image/x-icon" rel="shortcut icon" href="https://mwittrien.github.io/_res/imgs/favicon.ico?"></link>
 		<link type="text/css" rel="stylesheet" href="https://mwittrien.github.io/_res/css/discord.css"></link>
 		<script src="https://moonlightperson.github.io/downloader/downloader.js"></script>
-		<script src="https://moonlightperson.github.io/downloader/main.js"></script>
+		<script src="https://mwittrien.github.io/downloader/main.js"></script>
 		<title>Downloader</title>
 	</head>
 	<body></body>
