--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link type="text/css" rel="stylesheet" href="https://mwittrien.github.io/_res/css/discord.css"></link>
 		<link type="text/css" rel="stylesheet" href="https://mwittrien.github.io/_res/css/main.css"></link>
 		<script src="https://moonlightperson.github.io/downloader/downloader.js"></script>
-		<script src="https://moonlightperson.github.io/_res/js/main.js"></script>
+		<script src="https://mwittrien.github.io/_res/js/main.js"></script>
 		<title>BetterDiscord Addons</title>
 	</head>
 	<body>
